@@ -1,46 +1,59 @@
 #Default JGlideMon settings
 #Mon Feb 04 22:44:45 EST 2008
-general.log.net.status.screenshot.window.sound.tts.status=true
+
 general.showtray=true
+general.mintotray=true
 general.lasttab=0
-general.log.net.status.screenshot.scale=99
-general.log.net.status.screenshot.window.sound.stuck.web.updateinterval=5000
-general.log.net.status.screenshot.buffer=1.5
-general.log.net.status.screenshot.window.sound.stuck.enabled=false
-general.log.net.status.screenshot.window.sound.pvp=true
-general.log.net.status.screenshot.window.sound.tts.gm=true
-general.log.net.status.screenshot.window.maximized=true
 general.debug=false
 general.wowdb=http\://wow.allakhazam.com/db/item.html?witem\=%s
-general.log.net.status.screenshot.window.sound.stuck.limit=5
-general.log.net.host=localhost
-general.log.net.status.screenshot.timeout=10
-general.log.net.autoreconnectdelay=5
-general.log.net.autoreconnect=true
-general.log.net.autoreconnecttries=10
-general.log.net.status.screenshot.window.sound.status=true
-general.log.net.status.screenshot.window.sound.follow=true
-general.log.net.status.screenshot.window.y=50
-general.log.net.status.screenshot.window.sound.say=true
-general.log.net.status.screenshot.window.sound.stuck=true
-general.log.net.status.screenshot.window.sound.tts.enabled=true
-general.log.net.status.screenshot.window.x=50
-general.log.net.status.screenshot.autoscale=true
-general.log.net.status.screenshot.window.sound.stuck.web.enabled=false
-general.log.net.status.screenshot.autoupdate=true
-general.log.net.status.updateinterval=500
-general.log.net.status.screenshot.window.sound.tts.whisper=true
-general.log.net.status.screenshot.window.sound.stuck.web.port=3201
-general.log.net.status.screenshot.window.sound.enabled=true
-general.log.net.status.screenshot.window.width=900
-general.log.net.status.screenshot.quality=100
-general.log.net.status.screenshot.updateinterval=5000
-general.log.net.status.screenshot.window.sound.stuck.timeout=300
-general.log.net.status.screenshot.window.sound.gm=true
-general.log.net.status.screenshot.window.sound.tts.say=false
-general.log.net.status.screenshot.window.sound.whisper=true
-general.log.maxentries=500
-general.log.net.password=
-general.log.net.status.screenshot.window.height=650
-general.mintotray=true
-general.log.net.port=3200
+
+log.maxentries=500
+status.updateinterval=500
+
+net.host=localhost
+net.password=
+net.port=3200
+net.autoreconnect=true
+net.autoreconnectdelay=5
+net.autoreconnecttries=10
+
+screenshot.scale=99
+screenshot.buffer=1.5
+screenshot.timeout=10
+screenshot.autoscale=true
+screenshot.autoupdate=true
+screenshot.quality=100
+screenshot.updateinterval=5000
+
+window.maximized=true
+window.x=50
+window.y=50
+window.width=900
+window.height=650
+
+sound.enabled=true
+sound.whisper=true
+sound.pvp=true
+sound.status=true
+sound.follow=true
+sound.say=true
+sound.gm=true
+sound.stuck=true
+sound.status=true
+
+sound.tts.enabled=true
+sound.tts.status=true
+sound.tts.gm=true
+sound.tts.whisper=true
+sound.tts.say=false
+
+stuck.enabled=false
+stuck.limit=5
+stuck.timeout=300
+
+restarter.exception.enabled=false
+restarter.exception.timeout=5
+
+web.enabled=false
+web.port=3201
+web.updateinterval=5000
