@@ -5,6 +5,13 @@ Version 0.15
 - The configuration settings have been converted to Java's
   built in Properties type. Your JGlideMon.ini will automatically
   be converted to JGlideMon.properties.
+- Glider log entries containing "Exception" are now considered
+  urgent chat. Previously not all exceptions were marked. An
+  exception often indicates Glider has stopped unexpectedly.
+- The Stuck configuration tab has been renamed Restarter.
+  Additionally, an option has been added to restart Glider
+  when an exception log entry is received shortly before
+  a status entry indicating Glider stopped.
 
 Version 0.14
 ------------
